[metadata]
NAME = tfs 
version = 0.0.0
description = Transformers From Scratch 
author = dpressel
author_email = dpressel@interactions.com
license = Apache 2.0
keywords=
    deep-learning
    transformers 
long_description_content_type = text/markdown
long_description = file: README.md
license_files =
    ../LICENSE
    ../NOTICE
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find: 

install_requires =
    numpy
    tqdm
    tokenizers
    regex
    bs4

[options.entry_points]
console_scripts =
    bert_completer = tfs.examples.bert_completer:main
    tune_bert_for_cls = tfs.examples.tune_bert_for_cls:main
    pretrain_bert_wiki = tfs.examples.pretrain_bert_wiki:main


[options.extras_require]
examples:

    prompt_toolkit >= 2.0.0
    matplotlib
test:
    pytest

